# ITMO

./: README.md
2nd-course/Comp-Math/1lab/: .gitignore  pyvenv.cfg  ВычМат.docx  выч мат.py
2nd-course/Comp-Math/1lab/Scripts/: activate  activate.bat  activate.fish  activate.nu  test.txt
2nd-course/Comp-Math/lab1/: test.txt
3th-course/IS/lab1/: README.MD
3th-course/IS/lab1/lab/: pom.xml
3th-course/IS/lab1/lab/src/main/resources/mapper/: MagicCity.hbm.xml
3th-course/IS/lab1/lab/src/main/webapp/: cities.html  creatures.html  creatures.xhtml  special.html
3th-course/IS/lab1/lab/src/main/webapp/css/: styles.css
3th-course/IS/lab2/: .gitignore
3th-course/IS/lab2/lab/src/main/resources/: hibernate.cfg.xml
3th-course/IS/lab2/lab/src/main/webapp/: cities.html  creatures.html  special.html
3th-course/OC/lab1/vtsh/: CMakeLists.txt
3th-course/OC/lab1/vtsh/lib/: CMakeLists.txt  ema_join_hash.c  proc_clone.c  shell_seq.c  vtsh.c
3th-course/СИИ/lab1/: lab1.pl  Диаграмма без названия.drawio.html
3th-course/СИИ/lab2/: lab.py
3th-course/СИИ/lab3/: lab.py
3th-course/СИИ/lab4/: WineDataset.csv  lab.py
3th-course/СИИ/lab5/: lab.py
3th-course/СИИ/lab6/: lab.py
3th-course/СИИ/отчеты/: sii_module_1.docx  sii_module_2.docx
3th-course/апс/lab1/: ~$тмановДЕ_АПС_P3307_ЛР1.docx  Кудияш_АПС_P3307_lab1.docx
3th-course/апс/lab2/: Кудияш_АПС_P3307_lab2.docx
3th-course/моделирование/lab1/: 3307_Кудияш_УИР1.docx  apr.py  corel.py  custom_generator_data.xlsx  data.xlsx  generator.py  Книга1.xlsx
3th-course/моделирование/lab2/: Кудияш-Алферов модел лаб2 (1).docx
(+56 files in other folders)
